[package]
name = "grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "log2"
path = "src/nginx_log2.rs"

[[bin]]
name = "json"
path = "src/json.rs"


[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
winnow = { version = "0.6.20", features = ["simd"] }
