[package]
name = "grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "log2"
path = "src/nginx_log2.rs"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "json2"
path = "src/json2.rs"


[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
pest = { version = "2.7.14", features = ["pretty-print"] }
pest_derive = "2.7.14"
regex = "1.11.1"
rhai = { version = "1.20.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
winnow = { version = "0.6.20", features = ["simd"] }
